--- a/feedback/frontend/package.json
+++ b/feedback/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hrajput0322.github.io/moveinsync/feedback/frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
